--- a/day_56/ex56_57/views/home/index.ejs
+++ b/day_56/ex56_57/views/home/index.ejs
@@ -26,6 +26,14 @@
       </a>
 
       <a
+        href="/manage-device"
+        class="list-group-item list-group-item-action d-flex w-100 justify-content-start align-items-center gap-3"
+      >
+        <i class="fa-solid fa-list-check"></i>
+        <span class="menu-collapsed">Manage Device</span>
+      </a>
+
+      <a
         href="/auth/dang-xuat"
         class="list-group-item list-group-item-action d-flex w-100 justify-content-start align-items-center gap-3"
       >
