--- a/day_60/views/auth/register.ejs
+++ b/day_60/views/auth/register.ejs
@@ -1,62 +1,64 @@
-<h1 class="text-center">Đăng ký tài khoản chính chủ</h1>
-<% if (msg.length) { %>
-<div class="alert alert-danger mb-2"><%= msg[0] %></div>
-<% } %>
-<form action="" method="post">
-  <div class="mb-3">
-    <label for="">Tên</label>
-    <input
-      type="text"
-      class="form-control"
-      name="name"
-      placeholder="Tên user..."
-      value="<%= req.old.name %>"
-    />
-    <span class="text-danger fst-italic"><%= req.errors.name %></span>
-  </div>
+<div class="w-50 mx-auto">
+  <h1 class="text-center">Đăng ký tài khoản chính chủ</h1>
+  <% if (msg.length) { %>
+  <div class="alert alert-danger mb-2"><%= msg[0] %></div>
+  <% } %>
+  <form action="" method="post">
+    <div class="mb-3">
+      <label for="">Tên</label>
+      <input
+        type="text"
+        class="form-control"
+        name="name"
+        placeholder="Tên user..."
+        value="<%= req.old.name %>"
+      />
+      <span class="text-danger fst-italic"><%= req.errors.name %></span>
+    </div>
 
-  <div class="mb-3">
-    <label for="">Email</label>
-    <input
-      type="text"
-      class="form-control"
-      name="email"
-      placeholder="Email..."
-      value="<%= req.old.email %>"
-    />
-    <span class="text-danger fst-italic"><%= req.errors.email %></span>
-  </div>
+    <div class="mb-3">
+      <label for="">Email</label>
+      <input
+        type="text"
+        class="form-control"
+        name="email"
+        placeholder="Email..."
+        value="<%= req.old.email %>"
+      />
+      <span class="text-danger fst-italic"><%= req.errors.email %></span>
+    </div>
 
-  <div class="mb-3">
-    <label for="">Mật khẩu</label>
-    <input
-      type="password"
-      class="form-control"
-      name="password"
-      placeholder="Mật khẩu..."
-      value="<%= req.old.password %>"
-    />
-    <span class="text-danger fst-italic"><%= req.errors.password %></span>
-  </div>
+    <div class="mb-3">
+      <label for="">Mật khẩu</label>
+      <input
+        type="password"
+        class="form-control"
+        name="password"
+        placeholder="Mật khẩu..."
+        value="<%= req.old.password %>"
+      />
+      <span class="text-danger fst-italic"><%= req.errors.password %></span>
+    </div>
 
-  <div class="mb-3">
-    <label for="">Mật khẩu</label>
-    <input
-      type="password"
-      class="form-control"
-      name="reenterPassword"
-      placeholder="Nhập lại mật khẩu..."
-      value="<%= req.old.reenterPassword %>"
-    />
-    <span class="text-danger fst-italic"
-      ><%= req.errors.reenterPassword %></span
+    <div class="mb-3">
+      <label for="">Mật khẩu</label>
+      <input
+        type="password"
+        class="form-control"
+        name="reenterPassword"
+        placeholder="Nhập lại mật khẩu..."
+        value="<%= req.old.reenterPassword %>"
+      />
+      <span class="text-danger fst-italic"
+        ><%= req.errors.reenterPassword %></span
+      >
+    </div>
+    <span class="d-flex justify-content-end fst-italic mb-2"
+      >Bạn đã có tài khoản,
+      <a class="text-danger fw-bold" href="/auth/login">
+        Đăng nhập ngay!</a
+      ></span
     >
-  </div>
-  <span class="d-flex justify-content-end fst-italic mb-2"
-    >Bạn đã có tài khoản,
-    <a class="text-danger fw-bold" href="/auth/dang-nhap">
-      Đăng nhập ngay!</a
-    ></span
-  >
-  <button class="btn btn-primary w-100">Đăng ký</button>
-</form>
+    <button class="btn btn-primary w-100">Đăng ký</button>
+  </form>
+</div>
