--- a/day_60/views/auth/register.ejs
+++ b/day_60/views/auth/register.ejs
@@ -41,7 +41,7 @@
     </div>
 
     <div class="mb-3">
-      <label for="">Mật khẩu</label>
+      <label for="">Nhập mật khẩu lại</label>
       <input
         type="password"
         class="form-control"
